create class Icosahedro and TetrahedronWithInscribedIcosahedron

--- a/Tetrahedron/Tetrahedron.vcxproj.filters
+++ b/Tetrahedron/Tetrahedron.vcxproj.filters
@@ -27,6 +27,15 @@
     <ClCompile Include="ADSKTetrahedron.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ADSKIcosahedron.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ADSKTemp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ADSKTetrahedronWithInscribedIcosahedron.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StdAfx.h">
@@ -36,6 +45,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ADSKTetrahedron.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ADSKIcosahedron.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="exportDefs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ADSKTemp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ADSKTetrahedronWithInscribedIcosahedron.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
