--- a/icosahedron inscribed in a tetrahedron.vcxproj.filters
+++ b/icosahedron inscribed in a tetrahedron.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="utilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Tetrahedron\ADSKIcosahedron.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StdAfx.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="utilities.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Tetrahedron\ADSKIcosahedron.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
