added reactors so inscribed icosahedron changes the color of a random face

--- a/Tetrahedron/Tetrahedron.vcxproj.filters
+++ b/Tetrahedron/Tetrahedron.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="ADSKTetrahedronWithInscribedIcosahedron.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AcGiFaceDataManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="utilities.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StdAfx.h">
@@ -57,6 +63,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ADSKTetrahedronWithInscribedIcosahedron.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AcGiFaceDataManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utilities.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
