--- a/Tetrahedron/Tetrahedron.vcxproj
+++ b/Tetrahedron/Tetrahedron.vcxproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AcGiFaceDataManager.cpp" />
     <ClCompile Include="acrxEntryPoint.cpp" />
     <ClCompile Include="ADSKIcosahedron.cpp" />
     <ClCompile Include="ADSKTemp.cpp" />
@@ -81,8 +82,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Tetrahedron.cpp" />
+    <ClCompile Include="utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AcGiFaceDataManager.h" />
     <ClInclude Include="ADSKIcosahedron.h" />
     <ClInclude Include="ADSKTemp.h" />
     <ClInclude Include="ADSKTetrahedron.h" />
@@ -90,6 +93,7 @@
     <ClInclude Include="exportDefs.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="StdAfx.h" />
+    <ClInclude Include="utilities.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Tetrahedron.rc" />
