rename custom entity to ADSKCustomPyramid

--- a/Tetrahedron/Tetrahedron.vcxproj
+++ b/Tetrahedron/Tetrahedron.vcxproj
@@ -73,10 +73,10 @@
   <ItemGroup>
     <ClCompile Include="AcGiFaceDataManager.cpp" />
     <ClCompile Include="acrxEntryPoint.cpp" />
+    <ClCompile Include="ADSKCustomPyramid.cpp" />
     <ClCompile Include="ADSKIcosahedron.cpp" />
     <ClCompile Include="ADSKTemp.cpp" />
     <ClCompile Include="ADSKTetrahedron.cpp" />
-    <ClCompile Include="ADSKTetrahedronWithInscribedIcosahedron.cpp" />
     <ClCompile Include="StdAfx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -86,10 +86,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AcGiFaceDataManager.h" />
+    <ClInclude Include="ADSKCustomPyramid.h" />
     <ClInclude Include="ADSKIcosahedron.h" />
     <ClInclude Include="ADSKTemp.h" />
     <ClInclude Include="ADSKTetrahedron.h" />
-    <ClInclude Include="ADSKTetrahedronWithInscribedIcosahedron.h" />
     <ClInclude Include="exportDefs.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="StdAfx.h" />
