--- a/icosahedron inscribed in a tetrahedron.vcxproj
+++ b/icosahedron inscribed in a tetrahedron.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="acrxEntryPoint.cpp" />
     <ClCompile Include="ADSKDatabaseReactor.cpp" />
     <ClCompile Include="ADSKEditorReactor.cpp" />
+    <ClCompile Include="ADSKTetrahedronWithInscribedIcosahedronJig.cpp" />
     <ClCompile Include="ADSKTetrahedronWithInscribedIcosahedronReactor.cpp" />
     <ClCompile Include="DocData.cpp" />
     <ClCompile Include="icosahedron inscribed in a tetrahedron.cpp" />
@@ -93,12 +94,13 @@
     <ClCompile Include="Tetrahedron\AcGiFaceDataManager.cpp" />
     <ClCompile Include="Tetrahedron\ADSKIcosahedron.cpp" />
     <ClCompile Include="Tetrahedron\ADSKTetrahedron.cpp" />
-    <ClCompile Include="Tetrahedron\ADSKTetrahedronWithInscribedIcosahedron.cpp" />
+    <ClCompile Include="Tetrahedron\ADSKCustomPyramid.cpp" />
     <ClCompile Include="Tetrahedron\utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ADSKDatabaseReactor.h" />
     <ClInclude Include="ADSKEditorReactor.h" />
+    <ClInclude Include="ADSKTetrahedronWithInscribedIcosahedronJig.h" />
     <ClInclude Include="ADSKTetrahedronWithInscribedIcosahedronReactor.h" />
     <ClInclude Include="DocData.h" />
     <ClInclude Include="Resource.h" />
@@ -106,7 +108,7 @@
     <ClInclude Include="Tetrahedron\AcGiFaceDataManager.h" />
     <ClInclude Include="Tetrahedron\ADSKIcosahedron.h" />
     <ClInclude Include="Tetrahedron\ADSKTetrahedron.h" />
-    <ClInclude Include="Tetrahedron\ADSKTetrahedronWithInscribedIcosahedron.h" />
+    <ClInclude Include="Tetrahedron\ADSKCustomPyramid.h" />
     <ClInclude Include="Tetrahedron\utilities.h" />
   </ItemGroup>
   <ItemGroup>
