--- a/icosahedron inscribed in a tetrahedron.vcxproj.filters
+++ b/icosahedron inscribed in a tetrahedron.vcxproj.filters
@@ -39,7 +39,7 @@
     <ClCompile Include="ADSKDatabaseReactor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Tetrahedron\ADSKTetrahedronWithInscribedIcosahedron.cpp">
+    <ClCompile Include="Tetrahedron\ADSKCustomPyramid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Tetrahedron\utilities.cpp">
@@ -49,6 +49,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ADSKTetrahedronWithInscribedIcosahedronReactor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ADSKTetrahedronWithInscribedIcosahedronJig.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -74,7 +77,7 @@
     <ClInclude Include="ADSKDatabaseReactor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Tetrahedron\ADSKTetrahedronWithInscribedIcosahedron.h">
+    <ClInclude Include="Tetrahedron\ADSKCustomPyramid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Tetrahedron\utilities.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ADSKTetrahedronWithInscribedIcosahedronReactor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ADSKTetrahedronWithInscribedIcosahedronJig.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
